--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"version":"0.1.0","vsync":true,"grid_opacity":5,"music_volume":50.0}
+{"version":"v0.1.0","vsync":true,"grid_opacity":5,"music_volume":50.0,"window_mode":"Windowed"}
