Add:new lib `kgrs_debug` Move:`kgrs_ui::debug` -> `kgrs_debug::debug_ui` / `kgrs::ui::debug::wm_to_string` -> `kgrs_util::function::wm_to_string/` Improve:added some docs Remove:unnecessary imports Impl:full screen toggle with F11 key

--- a/kgrs_core/Cargo.toml
+++ b/kgrs_core/Cargo.toml
@@ -12,6 +12,7 @@ edition.workspace = true
 kgrs_audio = {path = "../kgrs_audio"}
 kgrs_config = {path = "../kgrs_config"}
 kgrs_const = {path = "../kgrs_const"}
+kgrs_debug = {path = "../kgrs_debug"}
 kgrs_game = {path = "../kgrs_game"}
 kgrs_ui = {path = "../kgrs_ui"}
 bevy = "0.9"
