--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "kgrs_audio",
     "kgrs_config",
     "kgrs_const",
+    "kgrs_debug",
     "kgrs_game",
     "kgrs_ui",
     "kgrs_util",
