--- a/kgrs_core/Cargo.toml
+++ b/kgrs_core/Cargo.toml
@@ -16,12 +16,6 @@ kgrs_debug = {path = "../kgrs_debug"}
 kgrs_game = {path = "../kgrs_game"}
 kgrs_ui = {path = "../kgrs_ui"}
 bevy = "0.9"
-bevy_egui = "0.18"
 colored = "2"
-# serde_json = "1.0"
-# rogger = "*"
-# chrono = "0.4"
-
-# [dependencies.serde]
-# version = "1.0"
-# features = ["derive"]
+bevy_egui = "0.18"
+bevy-inspector-egui = "0.15" # for Bevy 0.9
