Rname:binary crate "kgrs_game" -> "kgrs_core" Improve:rustfmt Impl:mino movements Add:new util function `fixed_update`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ members = [
     "kgrs_audio",
     "kgrs_config",
     "kgrs_const",
+    "kgrs_core",
     "kgrs_debug",
-    "kgrs_game",
     "kgrs_ui",
     "kgrs_util",
 ]
