--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"version":"v0.1.0","vsync":false,"grid_opacity":8,"music_volume":14.0,"window_mode":"Windowed"}
+{"version":"v0.1.0","vsync":true,"grid_opacity":8,"music_volume":14.0,"window_mode":"Windowed"}
