--- a/kagris/Cargo.toml
+++ b/kagris/Cargo.toml
@@ -13,7 +13,7 @@ kgrs_audio = {path = "../kgrs_audio"}
 kgrs_config = {path = "../kgrs_config"}
 kgrs_const = {path = "../kgrs_const"}
 kgrs_debug = {path = "../kgrs_debug"}
-kgrs_game = {path = "../kgrs_game"}
+kgrs_core = {path = "../kgrs_core"}
 kgrs_ui = {path = "../kgrs_ui"}
 bevy = "0.9"
 colored = "2"
