--- a/kgrs_core/Cargo.toml
+++ b/kgrs_core/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "kgrs_game"
-description = "Game library for KaGRiS"
+name = "kgrs_core"
+description = "Core library for KaGRiS"
 version = "0.1.0"
 authors.workspace = true
 license-file.workspace = true
-repository = "https://github.com/Rinrin0413/KaGRiS/kgrs_game/"
+repository = "https://github.com/Rinrin0413/KaGRiS/kgrs_core/"
 readme.workspace = true
 edition.workspace = true
 
